Android: - a long press on the play ground locks/unlocks screen orientation. - displays a status icon, when locked.

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,9 @@ syntax: glob
 .freecell4maemo/*
 .git/*
 .buildozer/*
-android/bin/*
-android/tmp/*
-android/*.apk
 *.sublime*
 mk
+mkenv
 ENV
 ENV*/*
 ARM*/*
