--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,14 @@ ignore =
     E124,
     # Continuation line over-indented for hanging indent
     E126,
+    # continuation line under-indented for visual indent
+    E128,
     # Missing whitespace around arithmetic operator
     E226,
+    # whitespace after '['
+    E201,
+    # expected 2 blank lines, found 1
+    E302,
     # Module level import not at top of file
     E402,
     # Line too long (82 > 79 characters)
@@ -22,3 +28,5 @@ ignore =
     E225,
     E701,
     F401, F403
+		# Missing newline between storage groups (gaga)
+		I201
